--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2024"
 clap = { version = "4.5.48", features = ["cargo", "color", "derive"] }
 colored = "3.0.0"
 flate2 = "1.1.2"
+libc = "0.2.176"
 
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 sha2 = "0.10.9"
 tar = "0.4.44"
 thiserror = "2.0.17"
